<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:gravity="center_vertical"
        android:background="@drawable/dialog_bg"
        tools:ignore="Autofill,LabelFor">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/weight"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialog_milk_weight"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fat"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialog_milk_fat"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rate"
            android:textStyle="bold|italic"
            app:layout_constraintBaseline_toBaselineOf="@+id/dialog_milk_rate"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dialog_milk_weight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/edittext_bg"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/dialog_datetime"
            tools:ignore="DuplicateSpeakableTextCheck"
            tools:text="7.100" />

        <EditText
            android:id="@+id/dialog_milk_fat"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/dialog_milk_weight"
            app:layout_constraintStart_toStartOf="@+id/dialog_milk_weight"
            app:layout_constraintTop_toBottomOf="@+id/dialog_milk_weight"
            tools:text="7.100" />

        <EditText
            android:id="@+id/dialog_milk_rate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/dialog_milk_weight"
            app:layout_constraintStart_toStartOf="@+id/dialog_milk_weight"
            app:layout_constraintTop_toBottomOf="@+id/dialog_milk_fat"
            tools:text="7.100" />

        <TextView
            android:id="@+id/dialog_datetime"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dec17M"
            android:textStyle="bold" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/done"
            android:textColor="#0277BD"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_milk_rate" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintTop_toBottomOf="@+id/dialog_milk_rate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textColor="#0277BD"/>

        <Button
            android:visibility="gone"
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialog_milk_rate"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
